# fastapi-starter-kit

./: .dockerignore   .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_create_users_table.py  c809e816e73e_create_events_table.py
app/: main.py
app/api/events/: routes.py  views.py
app/api/v1/events/: models.py  repositories.py  routes.py  schemas.py  services.py  tests.py  views.py
app/api/v1/users/: models.py  repositories.py  repository.py  routes.py  schemas.py  services.py  test.py  views.py
app/core/: config.py
app/core/db/: database.py
app/core/errors/: __init__.py
app/core/middlewares/: logging_middleware.py
app/core/schema/: base.py  error.py
docs/: contributing.md  index.md
docs/architecture/: middleware.md  overview.md
docs/core/: cache.md  database.md  error-handling.md  logging.md
docs/getting-started/: configuration.md  installation.md
