[project]
name = "fastapi-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.128.8",
    "orjson>=3.11.5",
    "pydantic-settings>=2.11.0",
    "redis[hiredis]>=7.0.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.1",
]
